--- Added alibity to specify someone as Sosa reference. Then the Sosa
    number is printed in navigation when displaying ancestors. Thanks to
    Emmanuelle Visseaux for this idea.
--- Restructuration of displaying of surnames and first names by alphabetic
    order and frequency. Fixed bug of bad alphabetic order when first names
    and surnames with accents. Access in indexes faster.
  - Descendants display limited to 12 generations in all cases (else too much
    text or too long to answer).
  - Added error message in relationship computing when loop in
    database (someone being his/her own ancestor).
  - In "search", added ability to write "I" instead of "Ier" (french form).
    Ex: "Charles I" or "Charles Ier" are both accepted.
  - Added ability to add ";opt=no_index" at end of requests to get an
    equivalent link independant from the persons' index number (useful
    to put direct links in Web pages).
  - Added text "Parents of" in top of pages of missing ancestors.
  - Fixed still several bugs (accents) due to new ANSEL encoding.

* Base configuration files (xxx.cnf)
  - Added variable "wizard_just_friend" to suspend the powers of
    "wizards" (e.g. for maintenance): when set to "yes", they become
    simple "friends" (default: "no").
  - Variable "renamed" can be used to specify that a database has been
    renamed. Generates a page giving the good URL to use.

* GeneWeb compiler and Consanguinity computing (gwc, consang)
  - Fixed accents displaying in traces and error messages.

* Welcome pages (start.txt)
  - Fixed wrong displaying of number of accesses in spanish (es) and
    portuguese (pt) versions.
  - Display thousand separators in numbers of accesses.

* Documentation (directory doc)
  - Added 2 cases in FAQ.
  - Many small changes.

GeneWeb Version 1.08
--------------------

* Added portuguese among languages (thanks to Yves Guignard).

* gwd:
  - fixed several displaying bugs due to ANSEL