@@ -188,7 +188,7 @@ relation.cmo relation.cmx: ./pa_lock.cmo
 relationLink.cmo relationLink.cmx: ./pa_html.cmo
 some.cmo some.cmx: ./def.syn.cmo
 srcfile.cmo srcfile.cmx: ./pa_lock.cmo
-title.cmo title.cmx: ./def.syn.cmo
+title.cmo title.cmx: ./def.syn.cmo ./pa_html.cmo
 update.cmo update.cmx: ./pa_html.cmo
 updateFam.cmo updateFam.cmx: ./pa_html.cmo
 updateFamOk.cmo updateFamOk.cmx: ./pa_lock.cmo
