@@ -31,6 +31,8 @@ GeneWeb Version 1.09
 --- Restructuration of displaying of surnames and first names by alphabetic
     order and frequency. Fixed bug of bad alphabetic order when first names
     and surnames with accents. Access in indexes faster.
+  - In list by title places, added clickable "The whole list" giving the
+    list of all persons associated with this place, whatever the title.
   - Descendants display limited to 12 generations in all cases (else too much
     text or too long to answer).
   - Added error message in relationship computing when loop in
